[FIX] : mypage overflow

--- a/front-end/src/pages/MyPage.module.css
+++ b/front-end/src/pages/MyPage.module.css
@@ -59,5 +59,4 @@
 
 .container {
   min-height:calc(100vh - 38px);
-  max-height: 100vh;
 }
